--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </div>
   <div class="card" style="text-align: center">
     <div class="card-body">
-      <button id="btn" class="btn  btn-primary">Ir al registro</button>
+      <button id="btn" class="btn  btn-primary" onclick="gopage()">Ir al registro</button>
 
     </div>
   
@@ -38,7 +38,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script src="inicio/Inicio.js"></script>
+  <script src="inicio/inicio.js"></script>
 </body>
 
 </html>
