--- a/registro.html
+++ b/registro.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="col-lg-12" style="margin-top: 12px;text-align: center;">
-                    <button id="boton" class="bnt btn-danger">Facturar</button>
+                    <button id="boton" class="bnt btn-danger" onclick="save(event)">Facturar</button>
                 </div>
             </div>
         </div>
