--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
   <!-- JavaScript Bundle with Popper -->
-  <srcip>
+  <script>
     function gopage(){
     window.location.href ='registro.html';
 
@@ -44,7 +44,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script src="inicio/inicio.js"></script>
+  <script src="../inicio/inicio.js"></script>
 </body>
 
 </html>
